blogs - create --complete
