# docs/swagger.yaml
@@ -1,5 +1,18 @@
 basePath: /api/v1
 definitions:
+  controllers.CreateBlogRequest:
+    properties:
+      content:
+        type: string
+      title:
+        type: string
+      user_id:
+        type: string
+    required:
+    - content
+    - title
+    - user_id
+    type: object
   controllers.CreateUserRequest:
     properties:
       email:
@@ -16,6 +29,23 @@ definitions:
     - last_name
     - password
     type: object
+  controllers.GetBlogResponse:
+    properties:
+      claps:
+        type: integer
+      content:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: string
+      title:
+        type: string
+      updated_at:
+        type: string
+      user_id:
+        type: string
+    type: object
   controllers.LoginRequest:
     properties:
       email:
@@ -26,8 +56,70 @@ definitions:
     - email
     - password
     type: object
+  models.Blog:
+    properties:
+      bookmarked_by:
+        items:
+          $ref: '#/definitions/models.User'
+        type: array
+      claps:
+        type: integer
+      comments:
+        items:
+          $ref: '#/definitions/models.Comment'
+        type: array
+      content:
+        type: string
+      created_at:
+        type: string
+      deleted_at:
+        type: string
+      id:
+        type: string
+      title:
+        type: string
+      updated_at:
+        type: string
+      user:
+        $ref: '#/definitions/models.User'
+      user_id:
+        type: string
+    type: object
+  models.Comment:
+    properties:
+      blog:
+        $ref: '#/definitions/models.Blog'
+      blog_id:
+        type: string
+      content:
+        type: string
+      created_at:
+        type: string
+      deleted_at:
+        type: string
+      id:
+        type: string
+      updated_at:
+        type: string
+      user:
+        $ref: '#/definitions/models.User'
+      user_id:
+        type: string
+    type: object
   models.User:
     properties:
+      blogs:
+        items:
+          $ref: '#/definitions/models.Blog'
+        type: array
+      bookmarks:
+        items:
+          $ref: '#/definitions/models.Blog'
+        type: array
+      comments:
+        items:
+          $ref: '#/definitions/models.Comment'
+        type: array
       created_at:
         type: string
       deleted_at:
@@ -59,6 +151,28 @@ info:
   title: Go Blogs API
   version: "1.0"
 paths:
+  /blog:
+    post:
+      consumes:
+      - application/json
+      description: Create a new blog
+      parameters:
+      - description: Blog object
+        in: body
+        name: blog
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.CreateBlogRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/controllers.GetBlogResponse'
+      summary: Create a new blog
+      tags:
+      - Blogs
   /login:
     post:
       consumes:
@@ -98,8 +212,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/models.User'
       summary: Create a new user
